--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
             <h2>I am a Web Developer</h2>
             <hr />
             <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-            <img src="../assets/images/movie-ranking.png" height="200" alt="Movie Ranking Preview" />
+            <img src="assets/images/movie-ranking.png" height="200" alt="Movie Ranking Preview" />
             <hr />
             <h4>The Count of Monte Cristo</h4>  
     
             <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-            <img src="../assets/images/easyscreenshot.png" height="200" alt="Birthday Invite Preview" />
+            <img src="assets/images/easyscreenshot.png" height="200" alt="Birthday Invite Preview" />
             <hr />
             <a href="./public/about.html">About Me</a>
             <a href="./public/contact.html">Contact Me</a>
